[tool.poetry]
name = "daily-challenge"
version = "0.1.0"
description = ""
authors = ["ScottChiuNYC <scott.chiu@rutgers.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
