[tool.poetry]
name = "daily-challenge"
version = "0.1.2"
description = ""
authors = ["ScottChiuNYC <scott.chiu@rutgers.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.7"
numpy = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
